# fm-evidence-service

./: .env.example  .gitignore  Dockerfile  README.md  README_TEMPLATE.md  SERVICE_EXTRACTION_MAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  generate-docs.yml  sync-to-enterprise.yml
alembic/: env.py
alembic/versions/: 20250107_initial_schema.py
scripts/: generate_readme.py
src/evidence_service/: __init__.py  main.py
src/evidence_service/api/routes/: evidence.py
src/evidence_service/config/: __init__.py  settings.py
src/evidence_service/core/: __init__.py  evidence_manager.py
src/evidence_service/infrastructure/database/: __init__.py  client.py  models.py
src/evidence_service/infrastructure/storage/: __init__.py  factory.py  local_storage.py  provider.py  s3_storage.py
src/evidence_service/models/: __init__.py  evidence.py  requests.py
tests/unit/: test_health.py
