[tool.poetry]
name = "fm-evidence-service"
version = "0.1.0"
description = "FaultMaven Evidence File Management Microservice"
authors = ["FaultMaven Team"]
readme = "README.md"
packages = [{include = "evidence_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fm-core-lib = {path = "fm-core-lib", develop = true}
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
aiosqlite = "^0.19.0"
alembic = "^1.13.0"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
python-multipart = "^0.0.6"
aiofiles = "^23.0.0"
aioboto3 = "^12.0.0"
types-aiobotocore = {extras = ["s3"], version = "^2.6.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.10.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
